# hrotti

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: poetry.yml
hrotti/: main.py  methods.py  websocket_manager.py
tests/: test_handle_request.py
