[tool.poetry]
name = "hrotti"
version = "0.1.0"
description = "Mock an Ethereum JSON-RPC compliant HTTP/WS server"
authors = ["Vukasin Gostovic <vukasin@gostovic.me>"]
license = "GPLV3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
exceptiongroup = "^1.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.12.1"
isort = "^5.13.2"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
